--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,8 +23,9 @@ header h1 {
 header h1 .seo {
     color: #d9dcd6;
 }
-/* changed div to nav */
-header nav {
+/* changed div to nav 
+removed list*/
+nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,11 +33,7 @@ header nav {
     font-size: 20px;
 }
 
-header nav ul {
-    list-style-type: none;
-}
-
-header nav ul li {
+nav a {
     display: inline-block;
     margin-left: 25px;
 }
