--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,6 +34,7 @@ nav {
 }
 
 nav a {
+    /*changed selector to match HTML */
     display: inline-block;
     margin-left: 25px;
 }
@@ -82,7 +83,7 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
-
+ /*consolidated classes to one right-side-settings class */
 .right-side-settings {
     margin-bottom: 32px;
     color: #ffffff;
@@ -98,7 +99,7 @@ p {
     margin: 10px auto;
     max-width: 150px;
 }
-
+/*changed class name to reflect HTML doc. removed duplicates*/
 .section-settings {
     margin-bottom: 20px;
     padding: 50px;
